--- a/Proyecto_Web_Avanzado_Front/my-app/src/components/header/header.css
+++ b/Proyecto_Web_Avanzado_Front/my-app/src/components/header/header.css
@@ -24,24 +24,28 @@
     position: absolute;
     left: 500px;
     margin-top: 0px;
+    
 }
 
 .menuSecInferior{
-    
     height: 250px;
     background-color: #111211;
-    opacity: 95%;
+    
     width: 1918px;
     position: fixed;
     left: 0px;
     visibility: hidden;
     opacity: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center
+    
 }
  
 #secInferior1-div1:hover > #secInferior1-div2 {
     visibility: visible;  
     height: 250px;
-    opacity: 95%;
+    opacity: 97%;
     transition: 1s;  
     
 }
@@ -54,6 +58,7 @@
 } 
 
 #secInferior2-div2{
+    
     height: 250px;
     background-color: #111211;
     width: 1918px;
@@ -62,12 +67,13 @@
     visibility: hidden;
     opacity: 0;
     
+    
 }
 
 #secInferior2-div1:hover > #secInferior2-div2 {
     visibility: visible;  
     height: 250px;
-    opacity: 95%;
+    opacity: 97%;
     transition: 1s;  
     
 }
@@ -85,6 +91,7 @@
 }
 
 #secInferior3-div2{
+    
     height: 250px;
     background-color: #111211;
     width: 1918px;
@@ -98,8 +105,61 @@
 #secInferior3-div1:hover > #secInferior3-div2 {
     visibility: visible;  
     height: 250px;
-    opacity: 95%;
+    opacity: 97%;
     transition: 1s;  
     
 }
 
+.subMenuSecInferior{
+   
+    height: 250px;
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.imgSecInferior{
+    
+    width: 300px;
+    height: 150px;
+    margin-top: 0px;
+}
+
+.pSecInferior{
+   
+    font-size: 15px;
+    margin:15px;
+    color: #e6dddc;
+}
+
+#pSecInferior1{
+    position: absolute;
+    left: 310px;
+    
+}
+
+.lineaSecInferior{
+    border: 1px solid #b5b1b0;
+    height: 0.1px;
+    width: 1300px;
+    position: relative;
+    bottom: 50px;
+}
+
+#pSecInferior2 {
+    position: absolute;
+    left: 788px;
+}
+
+
+
+.pLineaInferior{
+    margin-top: 15px;
+    font-style: italic;
+    font-size: smaller;
+}
+
+img {
+    opacity: 100%;
+}
